--- a/royal2-master/index.html
+++ b/royal2-master/index.html
@@ -432,7 +432,7 @@ From preventing phishing scams to blocking ransomware attacks, cybersecurity and
             </p>
             <div class="address_link-container">
               <a href="">
-                <img src="images/cyb.png" alt="">
+                <img src="images/mail.png" alt="">
                 <span> Email: cyberethix_security@gmail.com
                 </span>
               </a>
