Updated index, login and  login.js

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login </a>
+              <script defer src="js/login.js"></script>
             </li>
+            </html>
           </ul>
           <form class="form-inline my-2 my-lg-0">
             <input class="form-control nav_search-input mr-sm-2 d-none" type="search" placeholder="Search"
@@ -122,77 +124,7 @@
             </div>
           </div>
         </div>
-        <div class="carousel-item">
-          <div class="slider_box">
-            <div class="fixed_company-detail">
-              <p>
-                CYBERETHICS SECURITY
-              </p>
-            </div>
-            <div class="slider-detail">
-              <div class="slider_detail-heading">
-                <h2>
-                  stay
-                </h2>
-                <h1>
-                  SECURE. stay RESPONSIBLE.
-                </h1>
-              </div>
-              <div class="slider_detail-text">
-                <p>
-                  "Cybersecurity isn't just about protection,
-                  it's about doing what's right. Learn how to 
-                  secure your data, defends against threats,
-                  and practice ethical digital habits."
-                </p>
-              </div>
-              <div class="slider_detail-btn">
-                <a href="">
-                  <span>
-                    Learn More
-                  </span>
-                  <img src="images/arrow.png" alt="" class="ml-2" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <div class="slider_box">
-            <div class="fixed_company-detail">
-              <p>
-                CYBERETHICS SECURITY
-              </p>
-            </div>
-            <div class="slider-detail">
-              <div class="slider_detail-heading">
-                <h2>
-                  stay
-                </h2>
-                <h1>
-                  SECURE. stay RESPONSIBLE.
-                </h1>
-              </div>
-              <div class="slider_detail-text">
-                <p>
-                  "Cybersecurity isn't just about protection,
-                  it's about doing what's right. Learn how to 
-                  secure your data, defends against threats,
-                  and practice ethical digital habits."
-                </p>
-              </div>
-              <div class="slider_detail-btn">
-                <a href="">
-                  <span>
-                    Learn More
-                  </span>
-                  <img src="images/arrow.png" alt="" class="ml-2" />
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
