--- a/login.html
+++ b/login.html
@@ -5,22 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/login.js"></script>
+    <link rel="stylesheet" href="css/style.css"> 
+    <script defer src="js/login.js"></script> 
 </head>
 <body>
-    <div class="login-container">
+    <div>
         <h2>Login</h2>
-        <form id="loginForm">
+        <form id="loginForm">  
             <label for="username">Username:</label>
-            <input type="text" id="username" required>
-            
+            <input type="text" id="username" name="username" required>
+
             <label for="password">Password:</label>
-            <input type="password" id="password" required>
-            
+            <input type="password" id="password" name="password" required>
+
             <button type="submit">Login</button>
         </form>
-        <p id="message"></p>
+
+        <p id="message"></p> 
     </div>
 </body>
 </html>
